added the authentication page

--- a/Pages/about.css
+++ b/Pages/about.css
@@ -14,6 +14,7 @@ body {
   color: #333;
   margin: 0;
   padding: 0;
+  background: -webkit-linear-gradient(left, #003366, #004080, #0059b3, #0073e6);
 }
 
 .container {
